--- a/frond-video/package.json
+++ b/frond-video/package.json
@@ -14,7 +14,8 @@
     "react-hook-form": "^7.33.1",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.7"
+    "react-toastify": "^9.0.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
