--- a/frond-video/package.json
+++ b/frond-video/package.json
@@ -8,9 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "axios": "^0.27.2",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
